fixed some paddings, margins and gaps

--- a/styles/board.css
+++ b/styles/board.css
@@ -7,7 +7,8 @@
   --border-radius: 8px;
   --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   --task-padding: 16px;
-  --gap-size: 15px;
+  --gap-size-input: 32px;
+  --gap-size-task: 20px;
   --header-padding: 16px;
   --input-border: #ccc;
   --input-bg: #fff;
@@ -49,7 +50,8 @@ h2 {
 .input-container {
   display: flex;
   align-items: center;
-  gap: var(--gap-size);
+  gap: var(--gap-size-input);
+  padding-right: var(--header-padding);
 }
 
 .input {
@@ -60,6 +62,8 @@ h2 {
   border-radius: var(--input-radius);
   padding: 3px;
   gap: 8px;
+  width: 312px;
+  height: 42px;
 }
 
 .divider-container {
@@ -71,7 +75,7 @@ h2 {
 .search-input {
   border: none;
   outline: none;
-  font-size: 14px;
+  font-size: var(--FS-M);
   padding: 8px;
   width: 200px;
   background: transparent;
@@ -85,14 +89,14 @@ h2 {
 }
 
 .search-icon img {
-  width: 16px;
-  height: 16px;
+  width: 17.58px;
+  height: 17.58px;
 }
 
 button {
   background: var(--button-bg);
   color: white;
-  padding: 10px 15px;
+  padding: 8px 16px;
   border: none;
   border-radius: var(--input-radius);
   display: flex;
@@ -107,13 +111,18 @@ button:hover {
   background: var(--button-hover-bg);
 }
 
+button img {
+  width: 18.67px;
+  height: 18.67px;
+}
+
 .task-container {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
   flex-grow: 1;
   padding: var(--header-padding);
-  gap: var(--gap-size);
+  gap: var(--gap-size-task);
   overflow-x: auto;
   padding: 20px;
 }
@@ -145,9 +154,12 @@ button:hover {
   text-align: center;
   color: #a8a8a8;
   opacity: 0.8;
-  padding: 10px;
   border: 1px dotted #A8A8A8;
   border-radius: 8px;
   padding: 8px;
   background-color: #e7e7e7;
+}
+
+.margin {
+  margin-top: 15px;
 }
